some text editing

--- a/references.bib
+++ b/references.bib
@@ -18,9 +18,9 @@
 }
 
 
-@techreport{APHENA,
-  author       = {Katsouyanni, Klea and Samet, Jonathan M. and Anderson, H. Ross and Atkinson, Richard and Le Tertre, Alain and Medina, Sylvia and Samoli, Evangelia and Touloumi, Giota and Burnett, Richard T. and Krewski, Daniel and Ramsay, Tim and Dominici, Francesca and Peng, Roger D. and Schwartz, Joel and Zanobetti, Antonella},
+@Article{APHENA,
   title        = {Air Pollution and Health: {A} European and North American Approach (APHENA)},
+  author       = {Katsouyanni, Klea and Samet, Jonathan M. and Anderson, H. Ross and Atkinson, Richard and Le Tertre, Alain and Medina, Sylvia and Samoli, Evangelia and Touloumi, Giota and Burnett, Richard T. and Krewski, Daniel and Ramsay, Tim and Dominici, Francesca and Peng, Roger D. and Schwartz, Joel and Zanobetti, Antonella},
   institution  = {Health Effects Institute},
   type         = {Research Report},
   number       = {142},
@@ -277,6 +277,7 @@ Publisher: Sigma XI-The Scientific Research Society},
 
 @article{liu_understanding_2020,
 	title = {Understanding the {Role} of {Alternatives} in {Data} {Analysis} {Practices}},
+	author = {Liu, Jiali and Boukhelifa, Nadia and Eagan, James R.},
 	volume = {26},
 	issn = {1941-0506},
 	url = {https://ieeexplore.ieee.org/document/8805460/},
@@ -284,7 +285,6 @@ Publisher: Sigma XI-The Scientific Research Society},
 	number = {1},
 	urldate = {2025-05-20},
 	journal = {IEEE Transactions on Visualization and Computer Graphics},
-	author = {Liu, Jiali and Boukhelifa, Nadia and Eagan, James R.},
 	month = jan,
 	year = {2020},
 	pages = {66--76},
@@ -921,20 +921,16 @@ PMCID: PMC2843667}
 }
 
 @article{katsouyanni1996,
-	title = {Short term effects of air pollution on health: a European approach using epidemiologic time series data: the APHEA protocol.},
-	author = {Katsouyanni, K and Schwartz, J and Spix, C and Touloumi, G and Zmirou, D and Zanobetti, A and Wojtyniak, B and Vonk, J M and Tobias, A and {Pönkä}, A and Medina, S and {Bachárová}, L and Anderson, H R},
-	year = {1996},
-	month = {04},
-	date = {1996-04},
-	journal = {Journal of Epidemiology and Community Health},
-	pages = {S12--S18},
-	volume = {50},
-	number = {Suppl 1},
-	doi = {10.1136/jech.50.suppl_1.s12},
-	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1060882/},
-	note = {PMID: 8758218
-PMCID: PMC1060882}
+  title={Short term effects of air pollution on health: a European approach using epidemiologic time series data: the APHEA protocol.},
+  author={Katsouyanni, Klea and Schwartz, Joel and Spix, Claudia and Touloumi, Giota and Zmirou, Denis and Zanobetti, Antonella and Wojtyniak, Bogdan and Vonk, JM and Tobias, A and P{\"o}nk{\"a}, A and others},
+  journal={Journal of Epidemiology \& Community Health},
+  volume={50},
+  number={Suppl 1},
+  pages={S12--S18},
+  year={1996},
+  publisher={BMJ Publishing Group Ltd}
 }
+
 
 @article{peng2006,
 	title = {Model Choice in Time Series Studies of Air Pollution and Mortality},
@@ -1413,3 +1409,23 @@ PMCID: PMC1060882}
 	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2222.2007.02791.x},
 	langid = {en}
 }
+
+
+@article{atkinson_epidemiological_2014,
+	chapter = {Respiratory epidemiology},
+	title = {Epidemiological time series studies of {PM2}.5 and daily mortality and hospital admissions: a systematic review and meta-analysis},
+	volume = {69},
+	issn = {0040-6376, 1468-3296},
+	shorttitle = {Epidemiological time series studies of {PM2}.5 and daily mortality and hospital admissions},
+	url = {https://thorax.bmj.com/content/69/7/660},
+	doi = {10.1136/thoraxjnl-2013-204492},
+	number = {7},
+	urldate = {2026-02-01},
+	journal = {Thorax},
+	publisher = {BMJ Publishing Group Ltd},
+	author = {Atkinson, R. W. and Kang, S. and Anderson, H. R. and Mills, I. C. and Walton, H. A.},
+	month = jul,
+	year = {2014},
+	pages = {660--665}
+}
+
